# RTSP-Restreamer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose-no-env-file.yml  docker-compose.yml  pyproject.toml
app/: config.py  ffmpeg.py  main.py
app/static/: index.html
tests/: test_config.py  test_ffmpeg.py  test_main.py
