[project]
name = "rtsp-restreamer"
version = "0.1.0"
description = "RTSP to HLS restreamer for HTML5 video playback"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
test = [
    "httpx==0.28.1",
    "pytest==8.3.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
